--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+### CodeBlocks ###
+# specific to CodeBlocks IDE
+*.layout
+*.depend
+# generated directories
+bin/
+obj/
+
+
 # Prerequisites
 *.d
 
